<resources>
    <string name="app_name">Radius Agent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facilities">Facilities</string>
    <string name="options">Options</string>
    <string name="facility_id">Facility Id</string>
    <string name="options_id">Options Id</string>
    <string name="name">Name</string>
    <string name="select_facility">Select Facility</string>
    <string name="submit">Submit</string>
    <string name="icon">Icon</string>
    <string name="submit_options">Submit Options</string>
    <string name="select_options">Select options</string>
    <string name="submit_facilities">Submit Facility</string>
    <string name="update_facilities">Update Facilities</string>
    <string name="exclusion_desc">Please do not select the options or facility which are mentioned below</string>
    <string name="preview">Preview</string>
    <string name="turn_on_internet">Your data is not update to date please turn on your internet</string>
</resources>