<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OptionsSelectionFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOptionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/select_options"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/clOptionsSelections"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOptionsSelections"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_cl_home_screen"
            app:layout_constraintBottom_toTopOf="@id/btnSubmitOptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOptionsText">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/facility_id"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityIdResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/tvFacilityId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvFacilityId"
                tools:text="1" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/tvFacilityId"
                app:layout_constraintTop_toBottomOf="@id/tvFacilityId" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityNameResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/tvFacilityName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvFacilityName"
                tools:text="Apartment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOptions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@id/clOptionsSelections"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFacilityNameResult"
                tools:listitem="@layout/option_selection_single_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmitOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_cl_home_screen"
            android:text="@string/submit_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/clOptionsSelections"
            app:layout_constraintStart_toStartOf="@id/clOptionsSelections" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>