<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogOptionsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/options_id"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogOptionsIdResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tvDialogOptionsId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDialogOptionsId"
            tools:text="1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogOptionsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tvDialogOptionsId"
            app:layout_constraintTop_toBottomOf="@id/tvDialogOptionsId" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogFacilityNameResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tvDialogOptionsName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDialogOptionsName"
            tools:text="Condo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogIconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/icon"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvDialogOptionsId"
            app:layout_constraintTop_toBottomOf="@id/tvDialogOptionsName" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIconDialog"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tvDialogIconName"
            app:layout_constraintEnd_toEndOf="@id/tvDialogFacilityNameResult"
            app:layout_constraintTop_toTopOf="@id/tvDialogIconName"
            tools:srcCompat="@drawable/apartment" />


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_cl_home_screen"
            app:layout_constraintTop_toBottomOf="@id/ivIconDialog"
            app:layout_constraintStart_toStartOf="@id/tvDialogIconName"
            app:layout_constraintEnd_toEndOf="@id/ivIconDialog" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>