<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_cl_home_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/facilities"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/clType"
                app:layout_constraintTop_toTopOf="@id/clType" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/facility_id"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tvFacilities"
                app:layout_constraintTop_toBottomOf="@id/tvFacilities" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityIdResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/clType"
                app:layout_constraintTop_toTopOf="@id/tvFacilityId"
                tools:text="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/clType"
                app:layout_constraintStart_toStartOf="@id/tvFacilities"
                app:layout_constraintTop_toBottomOf="@id/tvFacilityId" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityNameResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/clType"
                app:layout_constraintTop_toTopOf="@id/tvFacilityName"
                tools:text="Property Type" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_cl_home_screen"
            app:layout_constraintStart_toStartOf="@id/clType"
            app:layout_constraintEnd_toEndOf="@id/clType"
            app:layout_constraintTop_toBottomOf="@id/clType">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/facilities"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/clOptions"
                app:layout_constraintTop_toTopOf="@id/clOptions" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOptionsId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/options_id"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tvOptions"
                app:layout_constraintTop_toBottomOf="@id/tvOptions" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOptionsIdResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/clOptions"
                app:layout_constraintTop_toTopOf="@id/tvOptionsId"
                tools:text="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOptionsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/ivIcon"
                app:layout_constraintStart_toStartOf="@id/tvOptions"
                app:layout_constraintTop_toBottomOf="@id/tvOptionsId" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOptionsNameResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/clOptions"
                app:layout_constraintTop_toTopOf="@id/tvOptionsName"
                tools:text="Apartment" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                tools:srcCompat="@drawable/apartment"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@id/clOptions"
                app:layout_constraintTop_toBottomOf="@id/tvOptionsName"
                app:layout_constraintStart_toStartOf="@id/clOptions"
                app:layout_constraintEnd_toEndOf="@id/clOptions" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelectFacility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:text="@string/select_facility"
            android:background="@drawable/bg_cl_home_screen"
            app:layout_constraintStart_toStartOf="@id/clOptions"
            app:layout_constraintEnd_toEndOf="@id/clOptions" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>